chore(notmuch): cleanup lhs-boxes

--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -8,13 +8,13 @@ _LOCAL,_TAGGED,_ARCHIVE,\
 _SENT"
 
 virtual-mailboxes \
-    "MAIN" "notmuch://?query=tag:MAIN
+    "MAIN" "notmuch://?query=tag:MAIN" \
+    "TAG?" "notmuch://?query=tag:_LOCAL and tag:_UNTAGGED"
 virtual-mailboxes \
     "LOCAL" "notmuch://?query=tag:_LOCAL" \
-    "| x" "notmuch://?query=tag:_LOCAL and tag:_TAGGED" \
-    "| x?" "notmuch://?query=tag:_LOCAL and tag:_UNTAGGED" \
-    "| hold" "notmuch://?query=folder:$my_mail_all_relative_path/.hold/" \
-    "| trash" "notmuch://?query=folder:$my_mail_all_relative_path/.trash/"
+    "| x" "notmuch://?query=tag:_LOCAL and tag:_ARCHIVE" \
+    "| hold" "notmuch://?query=folder:\"$my_mail_all_relative_path/.hold/\"" \
+    "| trash" "notmuch://?query=folder:\"$my_mail_all_relative_path/.trash/\""
 virtual-mailboxes \
     "REMOTE" "notmuch://?query=tag:_REMOTE"
 
