--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -4,7 +4,7 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 set hidden_tags = \
 "__ATTACHMENT,__SIGNED,__ENCRYPTED,\
 unread,replied,draft,flagged,passed,\
-_LOCAL,_TAGGED,_ARCHIVE,\
+_LOCAL,_REMOTE,_TAGGED,_ARCHIVE,\
 _SENT"
 
 virtual-mailboxes \
