feat(notmuch): copy builtin-tags to __<tag>

--- a/raw/.config/neomutt/box/common/notmuch.conf
+++ b/raw/.config/neomutt/box/common/notmuch.conf
@@ -3,7 +3,7 @@ set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default"
 # exclude these (implicit) tags from %g
 set hidden_tags = \
 "__ATTACHMENT,__SIGNED,__ENCRYPTED,\
-unread,replied,draft,flagged,passed,\
+unread,__UNREAD,replied,__REPLIED,flagged,__FLAGGED,passed,__PASSED,\
 _LOCAL,_REMOTE,_TAGGED,_ARCHIVE,\
 _SENT"
 
